--- a/index.html
+++ b/index.html
@@ -338,6 +338,361 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 </div>
 </section>
 <hr>
+<p class="editor-link"><a href="cloudcannon:collections/_data_mobil" class="btn"><strong>&#9998;</strong>Daftar Rental Mobil Jogja</a></p>
+<ul class="staff-list">
+	
+		<li class="staff">
+			<div class="staff-details">
+				<ul class="staff-info">
+					<li>All New Avanza Automatic</li>
+					<li><small>350k / hari (Lepas Kunci)</small></li>
+				</ul>
+			</div>
+
+			<div class="staff-bio">
+				<p><blockquote>
+  <p><img src="/uploads/veloz.jpg" alt="" width="650" height="450" /></p>
+</blockquote>
+
+</p><h4 id="harga-sewa"><strong>HARGA SEWA</strong></h4>
+
+<h4 id="lepas-kunci">LEPAS KUNCI</h4>
+
+<ul>
+  <li>
+    <h4 id="12-jam-275-ribu">12 Jam 275 ribu</h4>
+  </li>
+  <li>
+    <h4 id="24-jam-325-ribu">24 Jam 325 ribu</h4>
+  </li>
+</ul>
+
+<h4 id="mobil--driver">Mobil + Driver</h4>
+
+<ul>
+  <li>
+    <h4 id="10-jam-375-ribu">10 Jam 375 ribu</h4>
+  </li>
+  <li>
+    <h4 id="per-hari-450-ribu">Per Hari 450 ribu</h4>
+  </li>
+</ul>
+
+<h4 id="mobil--driver--bbm">Mobil + Driver + BBM</h4>
+
+<ul>
+  <li>
+    <h4 id="10-jam-500-ribu">10 Jam 500 ribu</h4>
+  </li>
+  <li>
+    <h4 id="per-hari-550-ribu">Per Hari 550 ribu</h4>
+  </li>
+</ul>
+<p></p>
+			</div>
+		</li>
+	<li class="staff">
+			<div class="staff-details">
+				<ul class="staff-info">
+					<li>All New Avanza Manual</li>
+					<li><small>300K / hari (Lepas Kunci)</small></li>
+				</ul>
+			</div>
+
+			<div class="staff-bio">
+				<p></p><p><img src="/uploads/avanza-manual.jpg" alt="" width="650" height="450" /></p>
+
+<h4 id="harga-sewa--"><br />HARGA SEWA    </h4>
+
+<h4 id="lepas-kunci--">LEPAS KUNCI    </h4>
+
+<ul>
+  <li>
+    <h4 id="12-jam-250-ribu">12 Jam 250 ribu</h4>
+  </li>
+  <li>
+    <h4 id="24-jam-300-ribu">24 Jam 300 ribu</h4>
+  </li>
+</ul>
+
+<h4 id="mobil--driver--">Mobil + Driver    </h4>
+
+<ul>
+  <li>
+    <h4 id="10-jam-350-ribu">10 Jam 350 ribu</h4>
+  </li>
+  <li>
+    <h4 id="per-hari-450-ribu">Per Hari 450 ribu</h4>
+  </li>
+</ul>
+
+<h4 id="mobil--driver--bbm--">Mobil + Driver + BBM    </h4>
+
+<ul>
+  <li>
+    <h4 id="10-jam-450-ribu">10 Jam 450 ribu</h4>
+  </li>
+  <li>
+    <h4 id="per-hari-550-ribu">Per Hari 550 ribu</h4>
+  </li>
+</ul>
+<p></p>
+			</div>
+		</li>
+		<li class="staff">
+			<div class="staff-details">
+				<ul class="staff-info">
+					<li>Grand Max PU Box</li>
+					<li><small>300k / hari (Lepas Kunci)</small></li>
+				</ul>
+			</div>
+
+			<div class="staff-bio">
+				<p><blockquote>
+  <p><img src="/uploads/content-5b0bed6990b95.jpg" alt="" width="800" height="600" /></p>
+</blockquote>
+
+</p><h4 id="harga-sewa">HARGA SEWA</h4>
+
+<h4 id="lepas-kunci">LEPAS KUNCI</h4>
+
+<ul>
+  <li>
+    <h4 id="12-jam-250-ribu">12 Jam 250 ribu</h4>
+  </li>
+  <li>
+    <h4 id="24-jam-300-ribu">24 Jam 300 ribu</h4>
+  </li>
+</ul>
+
+<h4 id="mobil--driver">Mobil + Driver</h4>
+
+<ul>
+  <li>
+    <h4 id="12-jam-350-ribu">12 Jam 350 ribu</h4>
+  </li>
+  <li>
+    <h4 id="per-hari-400-ribu">Per Hari 400 ribu</h4>
+  </li>
+</ul>
+
+<h4 id="mobil--driver--bbm">Mobil + Driver + BBM</h4>
+
+<ul>
+  <li>
+    <h4 id="12-jam-450-ribu">12 Jam 450 ribu</h4>
+  </li>
+  <li>
+    <h4 id="per-hari-550-ribu">Per Hari  550 ribu</h4>
+  </li>
+</ul>
+<p></p>
+			</div>
+		</li>
+	    <li class="staff">
+			<div class="staff-details">
+				<ul class="staff-info">
+					<li>Honda Brio Manual</li>
+					<li><small>300k / hari (Lepas Kunci)</small></li>
+				</ul>
+			</div>
+
+			<div class="staff-bio">
+				<p></p><p><img src="/uploads/brio-manual.jpg" alt="" width="650" height="450" /></p>
+
+<h4 id="harga-sewa"><strong>HARGA SEWA</strong></h4>
+
+<h4 id="lepas-kunci">LEPAS KUNCI</h4>
+
+<ul>
+  <li>
+    <h4 id="12-jam-250-ribu">12 Jam 250 ribu</h4>
+  </li>
+  <li>
+    <h4 id="24-jam-300-ribu">24 Jam 300 ribu</h4>
+  </li>
+</ul>
+
+<h4 id="mobil--driver">Mobil + Driver</h4>
+
+<ul>
+  <li>
+    <h4 id="10-jam-350-ribu">10 Jam 350 ribu</h4>
+  </li>
+  <li>
+    <h4 id="per-hari-450-ribu">Per Hari 450 ribu</h4>
+  </li>
+</ul>
+
+<h4 id="mobil--driver--bbm">Mobil + Driver + BBM</h4>
+
+<ul>
+  <li>
+    <h4 id="10-jam-450-ribu">10 Jam 450 ribu</h4>
+  </li>
+  <li>
+    <h4 id="per-hari-500-ribu">Per Hari 500 ribu</h4>
+  </li>
+</ul>
+<p></p>
+			</div>
+		</li>
+	    <li class="staff">
+			<div class="staff-details">
+				<ul class="staff-info">
+					<li>Honda Brio Matic</li>
+					<li><small>325K / hari (Lepas Kunci)</small></li>
+				</ul>
+			</div>
+
+			<div class="staff-bio">
+				<p></p><p><img src="/uploads/brio.jpg" alt="" width="650" height="450" /></p>
+
+<h4 id="harga-sewa">HARGA SEWA</h4>
+
+<h4 id="lepas-kunci--">LEPAS KUNCI    </h4>
+
+<ul>
+  <li>
+    <h4 id="12-jam-275-ribu">12 Jam 275 ribu</h4>
+  </li>
+  <li>
+    <h4 id="24-jam-325-ribu">24 Jam 325 ribu</h4>
+  </li>
+</ul>
+<p></p>
+			</div>
+		</li>
+	    <li class="staff">
+			<div class="staff-details">
+				<ul class="staff-info">
+					<li>Nissan March</li>
+					<li><small>300k / hari (Lepas Kunci)</small></li>
+				</ul>
+			</div>
+
+			<div class="staff-bio">
+				<p><blockquote>
+  <h4 id="harga-sewa"><strong>HARGA SEWA</strong></h4>
+
+  <h4 id="lepas-kunci">LEPAS KUNCI</h4>
+
+  <ul>
+    <li>
+      <h4 id="12-jam-250-ribu">12 Jam 250 ribu</h4>
+    </li>
+    <li>
+      <h4 id="24-jam-300-ribu">24 Jam 300 ribu</h4>
+    </li>
+  </ul>
+
+  <p><img src="/uploads/march.jpg" alt="" width="650" height="450" /></p>
+</blockquote>
+</p>
+			</div>
+		</li>
+                <li class="staff">
+			<div class="staff-details">
+				<ul class="staff-info">
+					<li>Toyota Agya</li>
+					<li><small>300k / hari (Lepas Kunci)</small></li>
+				</ul>
+			</div>
+
+			<div class="staff-bio">
+				<p><blockquote>
+  <p><img src="/uploads/agya.jpg" alt="" width="300" height="225" /></p>
+</blockquote>
+
+</p><h4 id="harga-sewa"><strong>HARGA SEWA</strong></h4>
+
+<h4 id="lepas-kunci">LEPAS KUNCI</h4>
+
+<ul>
+  <li>
+    <h4 id="12-jam-250-ribu">12 Jam 250 ribu</h4>
+  </li>
+  <li>
+    <h4 id="24-jam-300-ribu">24 Jam 300 ribu</h4>
+  </li>
+</ul>
+
+<h4 id="mobil--driver">Mobil + Driver</h4>
+
+<ul>
+  <li>
+    <h4 id="10-jam-350-ribu">10 Jam 350 ribu</h4>
+  </li>
+  <li>
+    <h4 id="per-hari-450-ribu">Per Hari 450 ribu</h4>
+  </li>
+</ul>
+
+<h4 id="mobil--driver--bbm">Mobil + Driver + BBM</h4>
+
+<ul>
+  <li>
+    <h4 id="10-jam-450-ribu">10 Jam 450 ribu</h4>
+  </li>
+  <li>
+    <h4 id="per-hari-500-ribu">Per Hari 500 ribu</h4>
+  </li>
+</ul>
+<p></p>
+			</div>
+		</li>
+                <li class="staff">
+			<div class="staff-details">
+				<ul class="staff-info">
+					<li>Toyota Calya</li>
+					<li><small>325K / hari (Lepas Kunci)</small></li>
+				</ul>
+			</div>
+
+			<div class="staff-bio">
+				<p><blockquote>
+  <p><img src="/uploads/calya.jpg" alt="" width="300" height="225" /></p>
+</blockquote>
+
+</p><h4 id="harga-sewa"><strong>HARGA SEWA</strong></h4>
+
+<h4 id="lepas-kunci">LEPAS KUNCI</h4>
+
+<ul>
+  <li>
+    <h4 id="12-jam-275-ribu">12 Jam 275 ribu</h4>
+  </li>
+  <li>
+    <h4 id="24-jam-325-ribu">24 Jam 325 ribu</h4>
+  </li>
+</ul>
+
+<h4 id="mobil--driver">Mobil + Driver</h4>
+
+<ul>
+  <li>
+    <h4 id="10-jam-350-ribu">10 Jam 350 ribu</h4>
+  </li>
+  <li>
+    <h4 id="per-hari-450-ribu">Per Hari 450 ribu</h4>
+  </li>
+</ul>
+
+<h4 id="mobil--driver--bbm">Mobil + Driver + BBM</h4>
+
+<ul>
+  <li>
+    <h4 id="10-jam-450-ribu">10 Jam 450 ribu</h4>
+  </li>
+  <li>
+    <h4 id="per-hari-500-ribu">Per Hari 500 ribu</h4>
+  </li>
+</ul>
+<p></p>
+			</div>
+		</li>
+</ul>
+</article>
 <section class="quote-section">
 <p class="container editable">
 					HOTLINE (0274)583197 &amp; (0274)547440 Untuk informasi lebih lanjut</p>
