--- a/index.html
+++ b/index.html
@@ -338,6 +338,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 </div>
 </section>
 <hr>
+<article class="content" data-cms-content-wrapper="/_layouts/page.html">
 <p class="editor-link"><a href="cloudcannon:collections/_data_mobil" class="btn"><strong>&#9998;</strong>Daftar Rental Mobil Jogja</a></p>
 <ul class="staff-list">
 	
@@ -692,6 +693,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 			</div>
 		</li>
 </ul>
+</article>
 <section class="quote-section">
 <p class="container editable">
 					HOTLINE (0274)583197 &amp; (0274)547440 Untuk informasi lebih lanjut</p>
