--- a/penginapan/index.html
+++ b/penginapan/index.html
@@ -321,7 +321,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 	<p class="editable" data-cms-source="/penginapan/index.html" data-cms-index="0">
 		Dateng ke jogja ga punya temen ato sodara buat menginap, yah terpaksa deh cari penginapan. Di Bening Guest House kami menyediakan kamar dan rumah dengan&nbsp; harga permalam mulai dari 150 ribu saja!
 	</p><hr />
-<p class="editor-link"><a href="cloudcannon:collections/_data_kamar" class="btn"><strong>&#9998;</strong>Daftar Kamar Murah Yogyakarta</a></p>
+<p <strong>&#9998;</strong>Daftar Kamar Murah Yogyakarta</p>
 
 <ul class="staff-list">
 	
