--- a/penginapan/index.html
+++ b/penginapan/index.html
@@ -117,9 +117,9 @@ header, footer, section { padding: 10px 20px; }
 
 @media (min-width: 700px) { header, footer, section { padding: 40px 10px; } }
 
-.content img { max-width: 100%; max-height: 100%; height: auto; border-radius: 2px; }
+.content img { max-width: auto; max-height: auto; height: auto; border-radius: 4px; }
 
-.main { font-size: 2rem; }
+.main { font-size: 1rem; }
 
 .light-section, .main { background-color: #f5f5f7; box-shadow: inset 0px 15px 15px -15px rgba(100, 100, 100, 0.2); }
 
