--- a/penginapan/index.html
+++ b/penginapan/index.html
@@ -117,7 +117,7 @@ header, footer, section { padding: 10px 20px; }
 
 @media (min-width: 700px) { header, footer, section { padding: 40px 10px; } }
 
-.content img { max-width: auto; max-height: auto; height: auto; border-radius: 4px; }
+.content img { max-width: 50%; max-height: 50%; height: auto; border-radius: 1px; }
 
 .main { font-size: 1rem; }
 
