--- a/penginapan/index.html
+++ b/penginapan/index.html
@@ -312,7 +312,15 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 		<a href="/penginapan" title="Penginapan Yogya">Penginapan</a>
 	
 </nav>	
+<head>
+<style>
+h3  { text-decoration: underline overline;
+    }
+</style>
 
+	<div class="page-header"> 
+         <h3>Penginapan</h3>
+	</div>
 <article class="content" data-cms-content-wrapper="/_layouts/page.html">
 	<p class="editable" data-cms-source="/penginapan/index.html" data-cms-index="0">
 		Dateng ke jogja ga punya temen ato sodara buat menginap, yah terpaksa deh cari penginapan. Di Bening Guest House kami menyediakan kamar dan rumah dengan&nbsp; harga permalam mulai dari 150 ribu saja!
