--- a/penginapan/index.html
+++ b/penginapan/index.html
@@ -311,7 +311,10 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     
 		<a href="/penginapan" title="Penginapan Yogya">Penginapan</a>
 	
-</nav>	
+</nav>
+	<section class="main">
+			<div class="container" data-cms-content-wrapper="/_layouts/default.html">
+				<html lang="id">
 <head>
 <style>
 h3  { text-decoration: underline overline;
