--- a/index.html
+++ b/index.html
@@ -312,6 +312,9 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 		<a href="/penginapan" title="Penginapan Yogya">Penginapan</a>
 	
 </nav>
+		<section class="main">
+			<div class="container" data-cms-content-wrapper="/_layouts/default.html">
+				<html lang="id">
 </body>
 <section class="main">
 <div class="container">
