--- a/index.html
+++ b/index.html
@@ -342,7 +342,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 </section>
 <hr>
 <article class="content" data-cms-content-wrapper="/_layouts/page.html">
-<p class="editor-link"><a href="cloudcannon:collections/_data_mobil" class="btn"><strong>&#9998;</strong>Daftar Rental Mobil Jogja</a></p>
+<p <strong>&#9998;</strong>Daftar Harga Mobil Rental Bening Transport</p>
 <ul class="staff-list">
 	
 		<li class="staff">
