--- a/penginapan/index.html
+++ b/penginapan/index.html
@@ -309,7 +309,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 	
 	
     
-		<a href="/penginapan" class="active" title="Penginapan Yogya">Penginapan</a>
+		<a href="/penginapan" title="Penginapan Yogya" class=" active">Penginapan</a>
 	
 </nav>
 	<section class="main">
