--- a/penginapan/index.html
+++ b/penginapan/index.html
@@ -336,7 +336,7 @@ h3  { text-decoration: underline overline;
 			<div class="staff-details">
 				<ul class="staff-info">
 					<li>HOMESTAY</li>
-					<li><small>550 Ribu Per Malam</small></li>
+					<li><small><h6>550 Ribu Per Malam</h6></small></li>
 				</ul>
 			</div>
 
