--- a/penginapan/index.html
+++ b/penginapan/index.html
@@ -335,8 +335,8 @@ h3  { text-decoration: underline overline;
 		<li class="staff">
 			<div class="staff-details">
 				<ul class="staff-info">
-					<li>HOMESTAY</li>
-					<li><small><h6>550 Ribu Per Malam</h6></small></li>
+					<li><h3>HOMESTAY</h3></li>
+					<li><small>550 Ribu Per Malam</small></li>
 				</ul>
 			</div>
 
@@ -382,7 +382,7 @@ h3  { text-decoration: underline overline;
 		<li class="staff">
 			<div class="staff-details">
 				<ul class="staff-info">
-					<li>KAMAR DELUXE</li>
+					<li><h3>KAMAR DELUXE</h3></li>
 					<li><small>200 Ribu Per Malam</small></li>
 				</ul>
 			</div>
@@ -415,7 +415,7 @@ h3  { text-decoration: underline overline;
 		<li class="staff">
 			<div class="staff-details">
 				<ul class="staff-info">
-					<li>KAMAR STANDAR</li>
+					<li><h3>KAMAR STANDAR</h3></li>
 					<li><small>150 Ribu Per Malam</small></li>
 				</ul>
 			</div>
