--- a/index.html
+++ b/index.html
@@ -325,15 +325,15 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 	<h3><q>Rental Mobil Mulai 300 Ribu perhari | Penginapan Mulai 150 Ribu permalam</q></h3><h2><q><span class="stabilo">Telp. 0274-583197 &amp; 0274-547440 Untuk informasi lebih lanjut dan booking.</span></q></h2>
 <div class="boxed">
 <p class="small"><q>Sejak tahun 2010 Bening Abadi Transport telah berkecimpung di bidang transportasi dan penginapan murah di Yogyakarta, dengan lokasi yang strategis berdekatan dengan kampus terkenal seperti UGM dan UNY Jogja. Rental mobil, penginapan dan guest house adalah layanan utama kami di kota yogya. Untuk guest house kamar yang kami tawarkan juga bisa anda booking melalui aplikasi Traveloka dengan harga yang lebih murah dan terjangkau untuk mahasiswa dan pelajar yogya. Semoga ke depan kami bisa memberikan pelayanan yang lebih baik kepada pelanggan pelanggan setia Bening Abadi Transport.<span class="wave">👋</span></q></p><hr>
-		<p><img alt="logo bening" width="250" height="100" data-src="/uploads/logo-bening.webp" class="lazyload" /></p>
+		<p><img alt="logo bening" width="250" height="100" data-src="/uploads/logo-bening.webp"></p>
 	</div>
 <div class="testimonials">
 <blockquote class="testimonial">
-			<p class="testimonial-message"><a href="/rental-mobil" title="Rental Mobil Yogya">Sewa mobil lepas kunci mulai 300 ribu perhari!!</a></p><p><img alt="mobil" data-src="/uploads/mobil-icon1.webp" width="360" height="239" class="lazyload" /></p>
+			<p class="testimonial-message"><a href="/rental-mobil" title="Rental Mobil Yogya">Sewa mobil lepas kunci mulai 300 ribu perhari!!</a></p><p><img alt="mobil" data-src="/uploads/mobil-icon1.webp" width="360" height="239"></p>
 			<p class="testimonial-author"><img src="/uploads/nunik.webp" alt="Photo of Nunik" />Nunik</p>
 		</blockquote>
 <blockquote class="testimonial">
-			<p class="testimonial-message"><a href="/penginapan" title="Penginapan Yogya">Nginep nyaman semaleman cuma 150 ribu!!</a></p><p><img alt="kamar" data-src="/uploads/kamar-icon1.webp" width="360" height="239" class="lazyload" /></p>
+			<p class="testimonial-message"><a href="/penginapan" title="Penginapan Yogya">Nginep nyaman semaleman cuma 150 ribu!!</a></p><p><img alt="kamar" data-src="/uploads/kamar-icon1.webp" width="360" height="239"></p>
 			<p class="testimonial-author"><img src="/uploads/aji.webp" alt="Photo of Aji" />Aji</p>
 		</blockquote>             
 </div>
