--- a/index.html
+++ b/index.html
@@ -329,11 +329,11 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 	</div>
 <div class="testimonials">
 <blockquote class="testimonial">
-			<p class="testimonial-message"><a href="/rental-mobil" title="Rental Mobil Yogya">Sewa mobil lepas kunci mulai 300 ribu perhari!!</a></p><p><img alt="mobil" data-src="/uploads/mobil-icon1.webp" width="260" height="139"></p>
+			<p class="testimonial-message"><a href="/rental-mobil" title="Rental Mobil Yogya">Sewa mobil lepas kunci mulai 300 ribu perhari!!</a></p><p><img alt="mobil" data-src="/uploads/mobil-icon1.jpg" width="260" height="139"></p>
 			<p class="testimonial-author"><img src="/uploads/nunik.jpg" alt="Photo of Nunik" />Nunik</p>
 		</blockquote>
 <blockquote class="testimonial">
-			<p class="testimonial-message"><a href="/penginapan" title="Penginapan Yogya">Nginep nyaman semaleman cuma 150 ribu!!</a></p><p><img alt="kamar" data-src="/uploads/kamar-icon1.webp" width="260" height="139"></p>
+			<p class="testimonial-message"><a href="/penginapan" title="Penginapan Yogya">Nginep nyaman semaleman cuma 150 ribu!!</a></p><p><img alt="kamar" data-src="/uploads/kamar-icon1.jpg" width="260" height="139"></p>
 			<p class="testimonial-author"><img src="/uploads/aji.jpg" alt="Photo of Aji" />Aji</p>
 		</blockquote>             
 </div>
