--- a/rental-mobil/index.html
+++ b/rental-mobil/index.html
@@ -329,7 +329,7 @@ h3  { text-decoration: underline overline;
 	<p class="editable" data-cms-source="/rental-mobil/index.html" data-cms-index="0">
 		Pengen jalan2 bareng keluarga tapi ga punya mobil...wkwk😂,ato yg punya mobil tapi mobil lagi mondok di bengkel,ya udah ngerental aja di Bening Abadi,mulai dari 300 ribu lepas kunci perhari.
 	</p><hr />
-<p <strong>&#9998;</strong>Daftar Rental Mobil Jogja</p>
+<p <strong>&#9998;</strong><h3>Daftar Rental Mobil Jogja</h3></p>
 <ul class="staff-list">
 	
 		<li class="staff">
