--- a/rental-mobil/index.html
+++ b/rental-mobil/index.html
@@ -326,7 +326,7 @@ h3  { text-decoration: underline overline;
 	</div>
 	
 <article class="content" data-cms-content-wrapper="/_layouts/page.html">
-<p <h3><strong>&#9998;</strong>Daftar Rental Mobil Jogja</h3></p>
+<h3><strong>&#9998;</strong>Daftar Rental Mobil Jogja</h3>
 <ul class="staff-list">
 	
 		<li class="staff">
