--- a/rental-mobil/index.html
+++ b/rental-mobil/index.html
@@ -324,15 +324,17 @@ h3  { text-decoration: underline overline;
 	<div class="page-header"> 
          <h3>Rental Mobil</h3>
 	</div>
-	
-<article class="content" data-cms-content-wrapper="/_layouts/page.html">
+	<article class="content" data-cms-content-wrapper="/_layouts/page.html">
+<p class="editable" data-cms-source="/penginapan/index.html" data-cms-index="0">
+Pengen jalan2 bareng keluarga tapi ga punya mobil...wkwk😂,ato yg punya mobil tapi mobil lagi mondok di bengkel,ya udah ngerental aja di Bening Abadi,mulai dari 300 ribu lepas kunci perhari.	
+	</p><hr>
 <h3><strong>&#9998;</strong>Daftar Rental Mobil Jogja</h3>
 <ul class="staff-list">
 	
 		<li class="staff">
 			<div class="staff-details">
 				<ul class="staff-info">
-					<li>All New Avanza Automatic</li>
+					<li>All New Avanza Automatic</li>9
 					<li><small>350k / hari (Lepas Kunci)</small></li>
 				</ul>
 			</div>
