--- a/rental-mobil/index.html
+++ b/rental-mobil/index.html
@@ -334,7 +334,7 @@ Pengen jalan2 bareng keluarga tapi ga punya mobil...wkwk😂,ato yg punya mobil 
 		<li class="staff">
 			<div class="staff-details">
 				<ul class="staff-info">
-					<li>All New Avanza Automatic</li>9
+					<li>All New Avanza Automatic</li>
 					<li><small>350k / hari (Lepas Kunci)</small></li>
 				</ul>
 			</div>
