--- a/penginapan/index.html
+++ b/penginapan/index.html
@@ -328,7 +328,7 @@ h3  { text-decoration: underline overline;
 	<p class="editable" data-cms-source="/penginapan/index.html" data-cms-index="0">
 		Dateng ke jogja ga punya temen ato sodara buat menginap, yah terpaksa deh cari penginapan. Di Bening Guest House kami menyediakan kamar dan rumah dengan&nbsp; harga permalam mulai dari 150 ribu saja!
 	</p><hr>
-<p <strong>&#9998;</strong>Daftar Kamar Murah Bening Guest House</p>
+<p <h3><strong>&#9998;</strong>Daftar Kamar Murah Bening Guest House</h3></p>
 
 <ul class="staff-list">
 	
