--- a/index.html
+++ b/index.html
@@ -697,6 +697,9 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 		</li>
 </ul>
 </article>
+<hr>
+<h3>Lokasi Kami</h3>
+<iframe width="520" height="400" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" id="gmap_canvas" src="https://maps.google.com/maps?width=520&amp;height=400&amp;hl=en&amp;q=%20+()&amp;t=&amp;z=12&amp;ie=UTF8&amp;iwloc=B&amp;output=embed"></iframe> <a href='http://www.mapsiframe.net/'>google map einbinden</a> <script type='text/javascript' src='https://maps-generator.com/google-maps-authorization/script.js?id=91e751af954131b65e0420794d61f4722f440527'></script>
 <section class="quote-section">
 <p class="container editable">
 					HOTLINE (0274)583197 &amp; (0274)547440 Untuk informasi lebih lanjut</p>
