--- a/index.html
+++ b/index.html
@@ -698,6 +698,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 </ul>
 </article>
 <hr>
+<iframe width="480" height="480" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" id="gmap_canvas" src="https://maps.google.com/maps?width=480&amp;height=480&amp;hl=en&amp;q=Jl.Nusa%20Indah%20CT%206%20No%2022B%20Samirono%20Sleman+(bening%20abadi%20transport)&amp;t=&amp;z=15&amp;ie=UTF8&amp;iwloc=B&amp;output=embed"></iframe> <a href='http://www.mapsiframe.net/'>google map einbinden</a> <script type='text/javascript' src='https://maps-generator.com/google-maps-authorization/script.js?id=e6a2de2fe13d158a8a02b9d45e04c0daa7692099'></script>
 <section class="quote-section">
 <p class="container editable">
 					HOTLINE (0274)583197 &amp; (0274)547440 Untuk informasi lebih lanjut</p>
