--- a/objek-wisata-jogja/index.html
+++ b/objek-wisata-jogja/index.html
@@ -218,7 +218,7 @@ nav a {display:inline-block; text-decoration:none; padding:4px; color:#444; lett
 h1  { text-decoration: underline overline;
     }
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@splidejs/splide-extension-video@0.4.6/dist/css/splide-extension-video.min.css">
-<script src="https://cdn.jsdelivr.net/npm/@splidejs/splide-extension-video@0.4.6/dist/js/splide-extension-video.min.js">
+<script src="https://cdn.jsdelivr.net/npm/@splidejs/splide-extension-video@0.4.6/dist/js/splide-extension-video.min.js"></script>
 </style>
 </head>
   <body>
