--- a/objek-wisata-jogja/index.html
+++ b/objek-wisata-jogja/index.html
@@ -219,7 +219,9 @@ h1  { text-decoration: underline overline;
     }
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@splidejs/splide-extension-video@0.4.6/dist/css/splide-extension-video.min.css" integrity="sha256-nZJWefZxHmYJe1K2TFC2GxGaAlque1b6EqZbIcxE+hI=" crossorigin="anonymous">
 <script src="https://cdn.jsdelivr.net/npm/@splidejs/splide-extension-video@0.4.6/dist/js/splide-extension-video.min.js" integrity="sha256-I3Lk9RNz3uJpEcexacrPX4zspt56m+ENJZtMWkCRy5I=" crossorigin="anonymous"></script>
-new Splide( '#splide' ).mount( window.splide.Extensions );
+<script>
+	new Splide( '.splide' ).mount();
+</script>
 </style>
 </head>
   <body>
