--- a/objek-wisata-jogja/index.html
+++ b/objek-wisata-jogja/index.html
@@ -222,6 +222,11 @@ h1  { text-decoration: underline overline;
 <script>
 	new Splide( '.splide' ).mount();
 </script>
+<script>
+	document.addEventListener( 'DOMContentLoaded', function () {
+		new Splide( '.splide' ).mount();
+	} );
+</script>
 </style>
 </head>
   <body>
