--- a/objek-wisata-jogja/index.html
+++ b/objek-wisata-jogja/index.html
@@ -254,11 +254,8 @@ h1  { text-decoration: underline overline;
 <div class="splide">
 	<div class="splide__track">
 		<ul class="splide__list">
-			<li class="splide__slide" data-splide-youtube="https://www.youtube.com/watch?v=spfw7Pykqy4">
-				<img src="/uploads/maya.jpg">
-			<li class="splide__slide" data-splide-youtube="https://www.youtube.com/watch?v=cdz__ojQOuU">
-				<img src="/uploads/pindul.jpg">
-			</li>
+			<li class="splide__slide" img src="/uploads/maya.jpg">Maya</li>	
+			<li class="splide__slide" img src="/uploads/pindul.jpg">Pindul</li>
 		</ul>
 	</div>
 </div>
