--- a/objek-wisata-jogja/index.html
+++ b/objek-wisata-jogja/index.html
@@ -216,8 +216,11 @@ input[type=submit]:hover, .btn:hover { color: #fefefe; background-color: #73a9c9
 nav  {position:flex; width:100%; display:flex; justify-content:center; background:rgba(255,255,255,0.5);z-index:999}
 nav a {display:inline-block; text-decoration:none; padding:4px; color:#444; letter-spacing:1px; font-size:.6em; text-shadow:1px 1px 1px #aaa} nav a.active {color:red} nav a:hover {color:#000}
 h1  { text-decoration: underline overline;
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@splidejs/splide@2.4.20/dist/css/themes/splide-default.min.css">
-<script src="https://cdn.jsdelivr.net/npm/@splidejs/splide@2.4.20/dist/js/splide.min.js"></script>
+<link rel="stylesheet" href="css/splide.min.css">
+<script src="js/splide.min.js"></script>
+<script>
+	new Splide( '.splide' ).mount();
+</script>	
 <script>
 	document.addEventListener( 'DOMContentLoaded', function () {
 		new Splide( '.splide' ).mount();
