--- a/rental-mobil/index.html
+++ b/rental-mobil/index.html
@@ -334,8 +334,9 @@ Pengen jalan2 bareng keluarga tapi ga punya mobil...wkwk😂,ato yg punya mobil 
 		<li class="staff">
 			<div class="staff-details">
 				<ul class="staff-info">
+					<li class="staff">
 					<li>All New Avanza Automatic</li>
-					<li><small>350k / hari (Lepas Kunci)</small></li>
+					<li><small>325k / hari (Lepas Kunci)</small></li>
 				</ul>
 			</div>
 
@@ -350,10 +351,10 @@ Pengen jalan2 bareng keluarga tapi ga punya mobil...wkwk😂,ato yg punya mobil 
 
 <ul>
   <li>
-    <h4 id="12-jam-275-ribu">12 Jam 275 ribu</h4>
+    <h4 id="12-jam-275-ribu">12 Jam 250 ribu</h4>
   </li>
   <li>
-    <h4 id="24-jam-325-ribu">24 Jam 325 ribu</h4>
+    <h4 id="24-jam-325-ribu">24 Jam 300 ribu</h4>
   </li>
 </ul>
 
@@ -361,10 +362,10 @@ Pengen jalan2 bareng keluarga tapi ga punya mobil...wkwk😂,ato yg punya mobil 
 
 <ul>
   <li>
-    <h4 id="10-jam-375-ribu">10 Jam 375 ribu</h4>
+    <h4 id="10-jam-375-ribu">10 Jam 350 ribu</h4>
   </li>
   <li>
-    <h4 id="per-hari-450-ribu">Per Hari 450 ribu</h4>
+    <h4 id="per-hari-450-ribu">Per Hari 425 ribu</h4>
   </li>
 </ul>
 
@@ -372,10 +373,10 @@ Pengen jalan2 bareng keluarga tapi ga punya mobil...wkwk😂,ato yg punya mobil 
 
 <ul>
   <li>
-    <h4 id="10-jam-500-ribu">10 Jam 500 ribu</h4>
+    <h4 id="10-jam-500-ribu">10 Jam 475 ribu</h4>
   </li>
   <li>
-    <h4 id="per-hari-550-ribu">Per Hari 550 ribu</h4>
+    <h4 id="per-hari-550-ribu">Per Hari 525 ribu</h4>
   </li>
 </ul>
 <p></p>
@@ -385,7 +386,7 @@ Pengen jalan2 bareng keluarga tapi ga punya mobil...wkwk😂,ato yg punya mobil 
 			<div class="staff-details">
 				<ul class="staff-info">
 					<li>All New Avanza Manual</li>
-					<li><small>300K / hari (Lepas Kunci)</small></li>
+					<li><small>275K / hari (Lepas Kunci)</small></li>
 				</ul>
 			</div>
 
@@ -398,10 +399,10 @@ Pengen jalan2 bareng keluarga tapi ga punya mobil...wkwk😂,ato yg punya mobil 
 
 <ul>
   <li>
-    <h4 id="12-jam-250-ribu">12 Jam 250 ribu</h4>
+    <h4 id="12-jam-250-ribu">12 Jam 225 ribu</h4>
   </li>
   <li>
-    <h4 id="24-jam-300-ribu">24 Jam 300 ribu</h4>
+    <h4 id="24-jam-300-ribu">24 Jam 275 ribu</h4>
   </li>
 </ul>
 
@@ -409,10 +410,10 @@ Pengen jalan2 bareng keluarga tapi ga punya mobil...wkwk😂,ato yg punya mobil 
 
 <ul>
   <li>
-    <h4 id="10-jam-350-ribu">10 Jam 350 ribu</h4>
+    <h4 id="10-jam-350-ribu">10 Jam 325 ribu</h4>
   </li>
   <li>
-    <h4 id="per-hari-450-ribu">Per Hari 450 ribu</h4>
+    <h4 id="per-hari-450-ribu">Per Hari 425 ribu</h4>
   </li>
 </ul>
 
@@ -420,10 +421,10 @@ Pengen jalan2 bareng keluarga tapi ga punya mobil...wkwk😂,ato yg punya mobil 
 
 <ul>
   <li>
-    <h4 id="10-jam-450-ribu">10 Jam 450 ribu</h4>
+    <h4 id="10-jam-450-ribu">10 Jam 425 ribu</h4>
   </li>
   <li>
-    <h4 id="per-hari-550-ribu">Per Hari 550 ribu</h4>
+    <h4 id="per-hari-550-ribu">Per Hari 525 ribu</h4>
   </li>
 </ul>
 <p></p>
@@ -433,7 +434,7 @@ Pengen jalan2 bareng keluarga tapi ga punya mobil...wkwk😂,ato yg punya mobil 
 			<div class="staff-details">
 				<ul class="staff-info">
 					<li>Grand Max PU Box</li>
-					<li><small>300k / hari (Lepas Kunci)</small></li>
+					<li><small>325k / hari (Lepas Kunci)</small></li>
 				</ul>
 			</div>
 
@@ -448,10 +449,10 @@ Pengen jalan2 bareng keluarga tapi ga punya mobil...wkwk😂,ato yg punya mobil 
 
 <ul>
   <li>
-    <h4 id="12-jam-250-ribu">12 Jam 250 ribu</h4>
+    <h4 id="12-jam-250-ribu">12 Jam 225 ribu</h4>
   </li>
   <li>
-    <h4 id="24-jam-300-ribu">24 Jam 300 ribu</h4>
+    <h4 id="24-jam-300-ribu">24 Jam 275 ribu</h4>
   </li>
 </ul>
 
@@ -459,10 +460,10 @@ Pengen jalan2 bareng keluarga tapi ga punya mobil...wkwk😂,ato yg punya mobil 
 
 <ul>
   <li>
-    <h4 id="12-jam-350-ribu">12 Jam 350 ribu</h4>
+    <h4 id="12-jam-350-ribu">12 Jam 325 ribu</h4>
   </li>
   <li>
-    <h4 id="per-hari-400-ribu">Per Hari 400 ribu</h4>
+    <h4 id="per-hari-400-ribu">Per Hari 375 ribu</h4>
   </li>
 </ul>
 
@@ -470,10 +471,10 @@ Pengen jalan2 bareng keluarga tapi ga punya mobil...wkwk😂,ato yg punya mobil 
 
 <ul>
   <li>
-    <h4 id="12-jam-450-ribu">12 Jam 450 ribu</h4>
+    <h4 id="12-jam-450-ribu">12 Jam 425 ribu</h4>
   </li>
   <li>
-    <h4 id="per-hari-550-ribu">Per Hari  550 ribu</h4>
+    <h4 id="per-hari-550-ribu">Per Hari  525 ribu</h4>
   </li>
 </ul>
 <p></p>
@@ -483,7 +484,7 @@ Pengen jalan2 bareng keluarga tapi ga punya mobil...wkwk😂,ato yg punya mobil 
 			<div class="staff-details">
 				<ul class="staff-info">
 					<li>Honda Brio Manual</li>
-					<li><small>300k / hari (Lepas Kunci)</small></li>
+					<li><small>275k / hari (Lepas Kunci)</small></li>
 				</ul>
 			</div>
 
@@ -496,10 +497,10 @@ Pengen jalan2 bareng keluarga tapi ga punya mobil...wkwk😂,ato yg punya mobil 
 
 <ul>
   <li>
-    <h4 id="12-jam-250-ribu">12 Jam 250 ribu</h4>
+    <h4 id="12-jam-250-ribu">12 Jam 225 ribu</h4>
   </li>
   <li>
-    <h4 id="24-jam-300-ribu">24 Jam 300 ribu</h4>
+    <h4 id="24-jam-300-ribu">24 Jam 275 ribu</h4>
   </li>
 </ul>
 
@@ -507,10 +508,10 @@ Pengen jalan2 bareng keluarga tapi ga punya mobil...wkwk😂,ato yg punya mobil 
 
 <ul>
   <li>
-    <h4 id="10-jam-350-ribu">10 Jam 350 ribu</h4>
+    <h4 id="10-jam-350-ribu">10 Jam 325 ribu</h4>
   </li>
   <li>
-    <h4 id="per-hari-450-ribu">Per Hari 450 ribu</h4>
+    <h4 id="per-hari-450-ribu">Per Hari 425 ribu</h4>
   </li>
 </ul>
 
@@ -518,10 +519,10 @@ Pengen jalan2 bareng keluarga tapi ga punya mobil...wkwk😂,ato yg punya mobil 
 
 <ul>
   <li>
-    <h4 id="10-jam-450-ribu">10 Jam 450 ribu</h4>
+    <h4 id="10-jam-450-ribu">10 Jam 425 ribu</h4>
   </li>
   <li>
-    <h4 id="per-hari-500-ribu">Per Hari 500 ribu</h4>
+    <h4 id="per-hari-500-ribu">Per Hari 475 ribu</h4>
   </li>
 </ul>
 <p></p>
@@ -531,7 +532,7 @@ Pengen jalan2 bareng keluarga tapi ga punya mobil...wkwk😂,ato yg punya mobil 
 			<div class="staff-details">
 				<ul class="staff-info">
 					<li>Honda Brio Matic</li>
-					<li><small>325K / hari (Lepas Kunci)</small></li>
+					<li><small>300K / hari (Lepas Kunci)</small></li>
 				</ul>
 			</div>
 
@@ -544,10 +545,10 @@ Pengen jalan2 bareng keluarga tapi ga punya mobil...wkwk😂,ato yg punya mobil 
 
 <ul>
   <li>
-    <h4 id="12-jam-275-ribu">12 Jam 275 ribu</h4>
+    <h4 id="12-jam-275-ribu">12 Jam 250 ribu</h4>
   </li>
   <li>
-    <h4 id="24-jam-325-ribu">24 Jam 325 ribu</h4>
+    <h4 id="24-jam-325-ribu">24 Jam 300 ribu</h4>
   </li>
 </ul>
 <p></p>
@@ -557,7 +558,7 @@ Pengen jalan2 bareng keluarga tapi ga punya mobil...wkwk😂,ato yg punya mobil 
 			<div class="staff-details">
 				<ul class="staff-info">
 					<li>Nissan March</li>
-					<li><small>300k / hari (Lepas Kunci)</small></li>
+					<li><small>275k / hari (Lepas Kunci)</small></li>
 				</ul>
 			</div>
 
@@ -569,10 +570,10 @@ Pengen jalan2 bareng keluarga tapi ga punya mobil...wkwk😂,ato yg punya mobil 
 
   <ul>
     <li>
-      <h4 id="12-jam-250-ribu">12 Jam 250 ribu</h4>
+      <h4 id="12-jam-250-ribu">12 Jam 225 ribu</h4>
     </li>
     <li>
-      <h4 id="24-jam-300-ribu">24 Jam 300 ribu</h4>
+      <h4 id="24-jam-300-ribu">24 Jam 275 ribu</h4>
     </li>
   </ul>
 
@@ -585,7 +586,7 @@ Pengen jalan2 bareng keluarga tapi ga punya mobil...wkwk😂,ato yg punya mobil 
 			<div class="staff-details">
 				<ul class="staff-info">
 					<li>Toyota Agya</li>
-					<li><small>300k / hari (Lepas Kunci)</small></li>
+					<li><small>275k / hari (Lepas Kunci)</small></li>
 				</ul>
 			</div>
 
@@ -600,10 +601,10 @@ Pengen jalan2 bareng keluarga tapi ga punya mobil...wkwk😂,ato yg punya mobil 
 
 <ul>
   <li>
-    <h4 id="12-jam-250-ribu">12 Jam 250 ribu</h4>
+    <h4 id="12-jam-250-ribu">12 Jam 225 ribu</h4>
   </li>
   <li>
-    <h4 id="24-jam-300-ribu">24 Jam 300 ribu</h4>
+    <h4 id="24-jam-300-ribu">24 Jam 275 ribu</h4>
   </li>
 </ul>
 
@@ -611,10 +612,10 @@ Pengen jalan2 bareng keluarga tapi ga punya mobil...wkwk😂,ato yg punya mobil 
 
 <ul>
   <li>
-    <h4 id="10-jam-350-ribu">10 Jam 350 ribu</h4>
+    <h4 id="10-jam-350-ribu">10 Jam 325 ribu</h4>
   </li>
   <li>
-    <h4 id="per-hari-450-ribu">Per Hari 450 ribu</h4>
+    <h4 id="per-hari-450-ribu">Per Hari 425 ribu</h4>
   </li>
 </ul>
 
@@ -622,10 +623,10 @@ Pengen jalan2 bareng keluarga tapi ga punya mobil...wkwk😂,ato yg punya mobil 
 
 <ul>
   <li>
-    <h4 id="10-jam-450-ribu">10 Jam 450 ribu</h4>
+    <h4 id="10-jam-450-ribu">10 Jam 425 ribu</h4>
   </li>
   <li>
-    <h4 id="per-hari-500-ribu">Per Hari 500 ribu</h4>
+    <h4 id="per-hari-500-ribu">Per Hari 475 ribu</h4>
   </li>
 </ul>
 <p></p>
@@ -635,7 +636,7 @@ Pengen jalan2 bareng keluarga tapi ga punya mobil...wkwk😂,ato yg punya mobil 
 			<div class="staff-details">
 				<ul class="staff-info">
 					<li>Toyota Calya</li>
-					<li><small>325K / hari (Lepas Kunci)</small></li>
+					<li><small>300K / hari (Lepas Kunci)</small></li>
 				</ul>
 			</div>
 
@@ -650,10 +651,10 @@ Pengen jalan2 bareng keluarga tapi ga punya mobil...wkwk😂,ato yg punya mobil 
 
 <ul>
   <li>
-    <h4 id="12-jam-275-ribu">12 Jam 275 ribu</h4>
+    <h4 id="12-jam-275-ribu">12 Jam 250 ribu</h4>
   </li>
   <li>
-    <h4 id="24-jam-325-ribu">24 Jam 325 ribu</h4>
+    <h4 id="24-jam-325-ribu">24 Jam 300 ribu</h4>
   </li>
 </ul>
 
@@ -661,10 +662,10 @@ Pengen jalan2 bareng keluarga tapi ga punya mobil...wkwk😂,ato yg punya mobil 
 
 <ul>
   <li>
-    <h4 id="10-jam-350-ribu">10 Jam 350 ribu</h4>
+    <h4 id="10-jam-350-ribu">10 Jam 325 ribu</h4>
   </li>
   <li>
-    <h4 id="per-hari-450-ribu">Per Hari 450 ribu</h4>
+    <h4 id="per-hari-450-ribu">Per Hari 425 ribu</h4>
   </li>
 </ul>
 
@@ -672,10 +673,10 @@ Pengen jalan2 bareng keluarga tapi ga punya mobil...wkwk😂,ato yg punya mobil 
 
 <ul>
   <li>
-    <h4 id="10-jam-450-ribu">10 Jam 450 ribu</h4>
+    <h4 id="10-jam-450-ribu">10 Jam 425 ribu</h4>
   </li>
   <li>
-    <h4 id="per-hari-500-ribu">Per Hari 500 ribu</h4>
+    <h4 id="per-hari-500-ribu">Per Hari 475 ribu</h4>
   </li>
 </ul>
 <p></p>
