--- a/rental-mobil/index.html
+++ b/rental-mobil/index.html
@@ -336,7 +336,7 @@ Pengen jalan2 bareng keluarga tapi ga punya mobil...wkwk😂,ato yg punya mobil 
 		<li class="staff">
 			<div class="staff-details">
 				<ul class="staff-info">
-					<li>All New Avanza Automatic</li>
+					<li><h6>All New Avanza Automatic</h6></li>
 					<li><small>325k / hari (Lepas Kunci)</small></li>
 				</ul>
 			</div>
