--- a/rental-mobil/index.html
+++ b/rental-mobil/index.html
@@ -434,7 +434,7 @@ Pengen jalan2 bareng keluarga tapi ga punya mobil...wkwk😂,ato yg punya mobil 
 		<li class="staff">
 			<div class="staff-details">
 				<ul class="staff-info">
-					<li>Grand Max PU Box</li>
+					<li><h3>Grand Max PU Box</h3></li>
 					<li><small>325k / hari (Lepas Kunci)</small></li>
 				</ul>
 			</div>
@@ -484,7 +484,7 @@ Pengen jalan2 bareng keluarga tapi ga punya mobil...wkwk😂,ato yg punya mobil 
 	    <li class="staff">
 			<div class="staff-details">
 				<ul class="staff-info">
-					<li>Honda Brio Manual</li>
+					<li><h3>Honda Brio Manual</h3></li>
 					<li><small>275k / hari (Lepas Kunci)</small></li>
 				</ul>
 			</div>
