--- a/index.html
+++ b/index.html
@@ -322,7 +322,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
          <h1>Rental Mobil Jogja Penginapan Murah Yogyakarta</h1><hr>
 	</div>
 <article class="content" data-cms-content-wrapper="/_layouts/page.html">
-	<h3><q>Rental Mobil Mulai 300 Ribu perhari | Penginapan Mulai 150 Ribu permalam</q></h3><h2><q><span class="stabilo">Telp. 0274-583197 &amp; 0274-547440 Untuk informasi lebih lanjut dan booking.</span></q></h2>
+	<h3><q>Rental Mobil Mulai 275 Ribu | Penginapan Mulai 150 Ribu</q></h3><h2><q><span class="stabilo">Telp. 0274-583197 &amp; 0274-547440 Untuk informasi lebih lanjut dan booking.</span></q></h2>
 <div class="boxed">
 <p class="small"><q>Sejak tahun 2010 Bening Abadi Transport telah berkecimpung di bidang transportasi dan penginapan murah di Yogyakarta, dengan lokasi yang strategis berdekatan dengan kampus terkenal seperti UGM dan UNY Jogja. Rental mobil, penginapan dan guest house adalah layanan utama kami di kota yogya. Untuk guest house kamar yang kami tawarkan juga bisa anda booking melalui aplikasi Traveloka dengan harga yang lebih murah dan terjangkau untuk mahasiswa dan pelajar yogya. Semoga ke depan kami bisa memberikan pelayanan yang lebih baik kepada pelanggan pelanggan setia Bening Abadi Transport.<span class="wave">👋</span></q></p><hr>
 		<p><img alt="logo bening" width="200" height="50" src="/uploads/logo-bening.webp"></p>
